running RunDrtExample from codeExamples dev branch (incl. added jvm attributes)